301folder-hiralabs/psoc student pack/lab exercise/psoc_intro/hardwaretask1.cydsn/BUILD.log
--------------- Build Started: 08/04/2023 15:46:23 Project: hardwaretask1, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:75:17: warning: "/*" within comment [-Wcomment]
                 /* Place your application code here. */
                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
main.c:58:9: error: 'LED_' undeclared (first use in this function)
         LED_
         ^
main.c:58:9: note: each undeclared identifier is reported only once for each function it appears in
main.c:91:5: error: expected ';' before '}' token
     }
     ^
main.c: At top level:
main.c:93:1: error: expected identifier or '(' before '}' token
 }
 ^
--------------- Build Failed: 08/04/2023 15:46:24 ---------------
